--- a/llm/Dockerfile
+++ b/llm/Dockerfile
@@ -2,6 +2,7 @@ FROM python:3.11-slim
 
 COPY requirements.txt /requirements.txt
 COPY llm-api.py /llm-api.py
+RUN pip install --no-cache-dir --upgrade -r requirements.txt
 
 EXPOSE 8000
 
