fix: path to dockerfile

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t technoed-hack-backend:latest .
+          docker build -t technoed-hack-backend:latest src/.
         
       - name: Stop existing container
         run: |
