--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -5,7 +5,11 @@ COPY requirements.txt /requirements.txt
 RUN pip install --no-cache-dir --upgrade -r requirements.txt
 
 COPY auth.py /auth.py
-COPY conf.py /conf.py
+
+ARG CONF
+
+RUN echo "$CONF" > /conf.py
+
 COPY db.py /db.py
 COPY main.py /main.py
 
